@@ -19,25 +19,8 @@ package com.sun.faces.context.flash;
 
 import static com.sun.faces.config.WebConfiguration.BooleanWebContextInitParameter.EnableDistributable;
 import static com.sun.faces.config.WebConfiguration.BooleanWebContextInitParameter.ForceAlwaysWriteFlashCookie;
+import static java.nio.charset.StandardCharsets.UTF_8;
 
-import com.sun.faces.config.WebConfiguration;
-import com.sun.faces.config.WebConfiguration.WebContextInitParameter;
-import com.sun.faces.facelets.tag.ui.UIDebug;
-import com.sun.faces.util.ByteArrayGuardAESCTR;
-import com.sun.faces.util.FacesLogger;
-import jakarta.faces.application.FacesMessage;
-import jakarta.faces.component.UIViewRoot;
-import jakarta.faces.context.ExternalContext;
-import jakarta.faces.context.FacesContext;
-import jakarta.faces.context.Flash;
-import jakarta.faces.event.PhaseId;
-import jakarta.faces.event.PostKeepFlashValueEvent;
-import jakarta.faces.event.PostPutFlashValueEvent;
-import jakarta.faces.event.PreClearFlashEvent;
-import jakarta.faces.event.PreRemoveFlashValueEvent;
-import jakarta.servlet.http.Cookie;
-import jakarta.servlet.http.HttpServletRequest;
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
 import java.security.InvalidKeyException;
@@ -54,6 +37,25 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
 import java.util.logging.Level;
 import java.util.logging.Logger;
+
+import com.sun.faces.config.WebConfiguration;
+import com.sun.faces.config.WebConfiguration.WebContextInitParameter;
+import com.sun.faces.facelets.tag.ui.UIDebug;
+import com.sun.faces.util.ByteArrayGuardAESCTR;
+import com.sun.faces.util.FacesLogger;
+
+import jakarta.faces.application.FacesMessage;
+import jakarta.faces.component.UIViewRoot;
+import jakarta.faces.context.ExternalContext;
+import jakarta.faces.context.FacesContext;
+import jakarta.faces.context.Flash;
+import jakarta.faces.event.PhaseId;
+import jakarta.faces.event.PostKeepFlashValueEvent;
+import jakarta.faces.event.PostPutFlashValueEvent;
+import jakarta.faces.event.PreClearFlashEvent;
+import jakarta.faces.event.PreRemoveFlashValueEvent;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
 
 /**
  * <p>
@@ -1260,15 +1262,7 @@ public class ELFlash extends Flash {
         void decode(FacesContext context, ELFlash flash, Cookie cookie) throws InvalidKeyException {
             String temp;
             String value;
-
-            String urlDecodedValue = null;
-
-            try {
-                urlDecodedValue = URLDecoder.decode(cookie.getValue(), "UTF-8");
-            } catch (UnsupportedEncodingException uee) {
-                urlDecodedValue = cookie.getValue();
-            }
-
+            String urlDecodedValue = URLDecoder.decode(cookie.getValue(), UTF_8);
             value = guard.decrypt(urlDecodedValue);
 
             try {
@@ -1337,16 +1331,10 @@ public class ELFlash extends Flash {
          * </p>
          */
         Cookie encode() {
-            Cookie result = null;
-
             String value = (null != previousRequestFlashInfo ? previousRequestFlashInfo.encode() : "") + "_"
                     + (null != nextRequestFlashInfo ? nextRequestFlashInfo.encode() : "");
             String encryptedValue = guard.encrypt(value);
-            try {
-                result = new Cookie(FLASH_COOKIE_NAME, URLEncoder.encode(encryptedValue, "UTF-8"));
-            } catch (UnsupportedEncodingException uee) {
-                result = new Cookie(FLASH_COOKIE_NAME, encryptedValue);
-            }
+            Cookie result = new Cookie(FLASH_COOKIE_NAME, URLEncoder.encode(encryptedValue, UTF_8));
 
             if (1 == value.length()) {
                 result.setMaxAge(0);
